# eos-stack-manifest

./: .coveragerc  .gitignore  BUILD_GUIDE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_TABLES.md  SECURITY.md  build-matrix.json  codecov.yml  manifest-config.json  manifest.json  package.json  run_all_tests.py
.github/: dependabot.yml
.github/workflows/: check-canon.yml  ci.yml  ecad-simulation.yml  sync-release-branch.yml  unified-build.yml
docs/: manifest.json
efab/: bom.py  drc.py  gerber.py
samples/: eos_reference_board.kicad_pcb
scripts/: build-all.sh  discover.mjs  generate-coverage-report.mjs  generate-release-docs.mjs  gerber-fab-readiness.py  kicad-erc-check.py  md-to-pdf.py  parse-coverage.py  parse-hardware-coverage.py  parse-web-coverage.mjs  release-all.sh  resolve-org.mjs  run-ecad-simulations.py  stats.mjs  sync.sh  validate-manifest.py  validate-schema.mjs
superproject/eai-edge/: CMakeLists.txt
tests/: test_bom_gerber.py  test_drc.py
tests/functional/: test_functional_e2e.py
tests/performance/: test_performance_benchmarks.py
tests/simulation/: test_ecad_product_simulations.py  test_emulation_simulation.py
tests/unit/: test_unit_core.py
